prepare on type formatting